--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,8 @@
         </div>
         <!-- thirdparty libraries-->
 		<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBUqfsa6I7Fhud3-xK24rldx0iKDcueURA&libraries=visualization"></script>		
-        <script src="js/thirdparty/jquery/jquery-3.2.1.min.js"></script>		
+        <script src="js/thirdparty/jquery/jquery-3.2.1.min.js"></script>	
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>	
         <script src="js/thirdparty/angular/angular.min.js"></script>
         <script src="js/thirdparty/angular-cookies/angular-cookies.min.js"></script>
         <script src="js/thirdparty/angular-route/angular-route.min.js"></script>		
