--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -124,5 +124,6 @@
         <script src="scripts/apps/horarios.controllers.js"></script>
         <script src="scripts/apps/cadastro.controller.js"></script>
         <script src="scripts/apps/chat.controller.js"></script>
+        <script src="scripts/apps/perfil.controller.js"></script>
     </body>
 </html>
