--- a/src/main/resources/static/views/pages/profile.html
+++ b/src/main/resources/static/views/pages/profile.html
@@ -97,19 +97,27 @@
                                     </tr>
                                     <tr>
                                         <td>Cep:</td>
-                                        <td><a href="javascript:void(0)" editable-text="user.endereco.cep">{{ user.endereco.cep || 'Vazio' }}</a></td>
+                                        <td><a href="javascript:void(0)" editable-text="user.cep">{{ user.cep || 'Vazio' }}</a></td>
                                     </tr>
                                     <tr>
                                         <td>Logradouro</td>
-                                        <td><a href="javascript:void(0)" editable-text="user.endereco.logradouro">{{ user.endereco.logradouro || 'Vazio' }}</a></td>
+                                        <td><a href="javascript:void(0)" editable-text="user.logradouro">{{ user.logradouro || 'Vazio' }}</a></td>
                                     </tr>
                                     <tr>
                                         <td>Numero</td>
-                                        <td><a href="javascript:void(0)" editable-text="user.endereco.numero">{{ user.endereco.numero || 'Vazio' }}</a></td>
+                                        <td><a href="javascript:void(0)" editable-text="user.numero">{{ user.numero || 'Vazio' }}</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Bairro</td>
+                                        <td><a href="javascript:void(0)" editable-text="user.bairro">{{ user.bairro || 'Vazio' }}</a></td>
                                     </tr>
                                     <tr>
                                         <td>Cidade</td>
-                                        <td><a href="javascript:void(0)" editable-text="user.endereco.cidade">{{ user.endereco.cidade || 'Vazio' }}</a></td>
+                                        <td><a href="javascript:void(0)" editable-text="user.cidade">{{ user.cidade || 'Vazio' }}</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Estado</td>
+                                        <td><a href="javascript:void(0)" editable-text="user.estado.sigla">{{ user.estado.sigla || 'Vazio' }}</a></td>
                                     </tr>
                                     <tr>
                                         <td>Telefone</td>
